# mealstrat

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  circle.yml  mealstrat.cabal  mkdocker.py  stack.yaml
.elasticbeanstalk/: config.yml
deploy/: Dockerrun.aws.json.template
migrations/: base.sql
spec/: Spec.hs
src/: Lib.hs  Main.hs
static/: main.css
