name:                mealstrat
version:             0.1.0.0
synopsis:            A recipe planner
description:         Please see README.md
homepage:            http://github.com/dbp/mealstrat
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2015 Daniel Patterson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable mealstrat
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , time
                     , mtl
                     , scotty
                     , blaze-html
                     , postgresql-simple
                     , resource-pool
                     , parsec
                     , digestive-functors
                     , digestive-functors-scotty
                     , digestive-functors-blaze
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/mealstrat


Test-Suite test-mealstrat
  type: exitcode-stdio-1.0
  hs-source-dirs: spec src
  main-is: Spec.hs
  default-language:    Haskell2010
  build-depends: base
               , text
               , time
               , parsec
               , containers
               , hspec
               , postgresql-simple
               , resource-pool
               , digestive-functors
               , blaze-html